# haeda

./: .gitignore  CLAUDE.md  Makefile  docker-compose.yml
app/: README.md  (+4 more)
server/: .dockerignore  .env.example  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml  seed.py
server/alembic/: env.py
server/alembic/versions/: 20260404_0000_001_initial_schema.py  20260405_0000_002_add_idx_challenge_is_public.py  20260409_0000_003_photo_url_to_photo_urls.py  20260409_0000_004_add_nudges_and_notifications.py  20260410_0000_005_add_notify_streak_to_challenge_members.py  20260410_0001_006_add_gem_transactions.py  20260410_0002_007_drop_is_public.py  20260410_0003_008_add_items_and_character.py  20260410_0004_009_add_item_effects.py  20260410_0005_010_add_friendships.py  20260410_0006_011_add_feed_and_claps.py  20260410_0007_012_add_appearance_to_character_equips.py  20260411_0001_013_add_user_background_color.py  20260412_0000_014_add_user_day_cutoff_hour.py  20260412_0001_015_move_day_cutoff_to_challenge.py  20260419_0001_016_add_room_speech.py  (+7 more)
server/app/: config.py  database.py  dependencies.py  exceptions.py  main.py
server/tests/: conftest.py  test_appearance.py  test_auth.py  test_challenge_create_join.py  test_challenges.py  test_comments.py  test_completion.py  test_gem_packs.py  test_me.py  test_public_challenges.py  test_room_equip.py  test_room_speech.py  test_scheduler.py  test_scheduler_registration.py  test_streak_calendar.py  test_time.py  test_treasure_chest.py  test_unit.py  test_user_discriminator.py  test_verification_detail.py  test_verifications.py
(+516 files in other folders)
